# tracer

./: AGENTS.md  pyproject.toml
.github/workflows/: validate.yml
docs/: architecture.md  conversational-layer.md  pipeline.md  workspace.md
docs/contrib/: docs-rules.md  skills-rules.md
docs/superpowers/specs/: 2026-03-20-conversational-agent-design.md
scripts/: validate_docs.py  validate_skills.py
skills/add-data-provider/: SKILL.md
skills/add-llm-provider/: SKILL.md
skills/alpha-report/: SKILL.md
skills/analyze-market/: SKILL.md
skills/backtest/: SKILL.md
